[#10251579] Revised linux/restore_test_configure.md, windows/backup_restore_windows.md, windows/upgrade_version.md, linux/upgrade_version.md, windows/deploy_guide.md